# bookstock-back

./: .gitignore  Makefile  docker-compose-devdb.yml  pyproject.toml
bookstock_backend/: manage.py
bookstock_backend/apps/: urls.py
bookstock_backend/apps/management/: admin.py  api.py  apps.py  models.py  serializers.py  urls.py
bookstock_backend/apps/management/migrations/: 0001_initial.py  0002_book_created_at_book_updated_at_and_more.py  0002_book_rental_price_book_sale_price.py  0003_user_created_at_user_updated_at.py
bookstock_backend/bookstock_backend/: asgi.py  jazzmin_settings.py  settings.py  urls.py  wsgi.py
bookstock_backend/bookstock_backend/static/: custom.css
bookstock_backend/utils/: models.py
